refactor: change api path
